--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,23 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "biopython>=1.85",
+    "dm-haiku>=0.0.13",
+    "gtfparse>=2.5.0",
+    "ipykernel>=6.29.5",
+    "jax[cuda12-pip]>=0.4.35",
+    "matplotlib>=3.10.1",
+    "nucleotide-transformer",
+    "numpy<2",
+    "pandas>=2.2.3",
+    "polars>=0.20.31",
+    "pyfaidx>=0.8.1.3",
+    "scikit-learn>=1.6.1",
+    "tensorflow[and-cuda]>=2.18.1",
+    "tqdm>=4.67.1",
+    "zarr>=2.18.3",
+]
+
+[tool.uv.sources]
+nucleotide-transformer = { git = "https://github.com/instadeepai/nucleotide-transformer", rev = "main" }
